# git-tidy

./: .gitignore  .goreleaser.yml  Cargo.toml  README.md  git.go  go.mod  go.sum  main.go
.devcontainer/: Dockerfile  devcontainer.json
.github/: main.workflow  upload-coverage.sh
.github/workflows/: ci.yml
commands/: default.go  intent.go  version.go
git/: branch_manager.go  cmd_runnerr_moq_test.go  exec.go  executor_moq_test.go  git.go  git_test.go
reporting/: reporting.go
snap/: snapcraft.yaml
src/: i18n.rs  list.rs  main.rs  prompt.rs
src/git/: error.rs  mod.rs  models.rs
