[package]
name = "git-tidy"
version = "1.1.0"
authors = ["Drew Wyatt <drew.j.wyatt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.7.1"
indicatif = "0.15.0"
regex = "1"
structopt = { version = "0.3" }
